- Added tile to show an item is available from the Quicksilver shop
- Bring the Advanced Search page back
- Better controller icon system
  - e.g. Boltcaster description now shows keys based on platform better

For more details on this update please visit the "What is New" page in the Apps or on the website
