@@ -38,11 +38,15 @@
 				},
 				{
 					"type": "text",
-					"content": "For those of you getting a second living ship you need (as I said above) 10,000 nanites and 1 void egg. You will have to have the void egg in your inventory when you're pulsing around you will then meet an anomaly again and talk then head to the coordina.... oh wait where do you get the different living ships?  Well lucky for you I  got a list. However there is so much that I cannot list them all but on nms pinterest coordinates exchange people may have the living ship you want. Now as I was saying head to the coordinates you received and feed it 10,000 nanites and voila you now have your second living ship"
+					"content": "For those of you getting a second living ship you need (as I said above) 10,000 nanites and 1 void egg. You will have to have the void egg in your inventory when you're pulsing around you will then meet an anomaly again and talk then head to the coordina.... oh wait where do you get the different living ships? Well I could tell you but there is so many I just cannot do them all. But on nms pinterest/reddit coordinates exchange people may have the living ship you want. Now as I was saying head to the coordinates you received and feed it 10,000 nanites and voila you now have your second living ship"
 				},
 				{
 					"type": "text",
 					"content": "Now you may be wondering *what is the process of finding the second living ship I  want?* well what you want to do is to head to the coordinates where the living ship you want is then restart the mission (it starts a mission even when you are getting your second living ship) then it will pop up and now you have your own living ship you wanted! However of course you could always get a random ship."
+				},
+				{
+					"type": "text",
+					"content": "(Below is current information I have for types of living ships but not locations so you can search them up)\nAccessories: Tusked,3 engine, 2 engine, 1 engine,hammer head, egg (if you look at it sideways), \nColors: (they can mix but I'm just saying the ones by them selves) red,white,yellow, purple,black,grey, and blue"
 				}
 			]
 		},
@@ -55,7 +59,7 @@
 				},
 				{
 					"type": "text",
-					"content": "Well now that you know how to get and how to a \nIiving ship now go on travelers! \n\nIf any one can message me through discord with living ship locations that would be great to get it in this guide\n"
+					"content": "Well now that you know how to get and how to a \nIiving ship now go on travelers! \n\nIf any one can message me through discord with living ship locations and types that would be great to get it in this guide\nMy discord is phinoxdragon thank you"
 				}
 			]
 		}
