@@ -2,6 +2,7 @@
 - Bring the Advanced Search page back
 - Better controller icon system
   - e.g. Boltcaster description now shows keys based on platform better
+- Updates to "Living ship how to and how to get" guide
 
 For more details on this update please visit the "What is New" page in the Apps or on the website
 
